# rust_DO

./: .gitignore  README.md  common.env  log4rs.yml  step.env  step_log4rs.yml
crates/apis/: Cargo.toml
crates/apis/src/: api.rs  entities.rs  lib.rs  metaapi_market_data_api.rs
crates/apis/tests/: test_metaapi.rs
crates/backtesting/: Cargo.toml
crates/backtesting/src/: backtesting_base_store.rs  historical_data.rs  lib.rs  trading_engine.rs
crates/backtesting/src/historical_data/: serialization.rs  synchronization.rs
crates/backtesting/src/trading_engine/: tests.rs
crates/backtesting/tests/: test_historical_data_serialization.rs
crates/base/: Cargo.toml
crates/base/src/: corridor.rs  entities.rs  helpers.rs  historical_data.rs  lib.rs  notifier.rs  order_base_store.rs  params.rs  requests.rs  stores.rs  sync_historical_data.rs
crates/base/src/entities/: candle.rs  order.rs  tick.rs
crates/base/src/historical_data/: serialization.rs  synchronization.rs
crates/base/src/requests/: api.rs  entities.rs  ureq.rs
crates/base/src/stores/: candle_store.rs  order_store.rs  tick_store.rs
crates/base/tests/: test_historical_data_serialization.rs  test_notifier.rs  test_params.rs
crates/realtime/: Cargo.toml
crates/strategies/: Cargo.toml
crates/strategies/src/: lib.rs  step.rs
crates/strategies/src/step/: step_backtesting.rs  utils.rs
crates/strategies/src/step/utils/: angle_utils.rs  backtesting_charts.rs  corridors.rs  entities.rs  helpers.rs  level_conditions.rs  level_utils.rs  order_utils.rs  orders.rs  settings.rs  stores.rs  trading_limiter.rs
crates/strategies/src/step/utils/angle_utils/: tests.rs
crates/strategies/src/step/utils/corridors/: tests.rs
crates/strategies/src/step/utils/entities/: angle.rs  angles.rs  candle.rs  order.rs  params.rs  settings.rs  strategies.rs  tick.rs  working_levels.rs
crates/strategies/src/step/utils/level_conditions/: tests.rs
crates/strategies/src/step/utils/level_utils/: tests.rs
crates/strategies/src/step/utils/order_utils/: tests.rs
crates/strategies/src/step/utils/stores/: angle_store.rs  base.rs  candle_store.rs  in_memory_backtesting_store.rs  in_memory_step_backtesting_config_store.rs  in_memory_step_backtesting_store.rs  in_memory_step_realtime_config_store.rs  step_backtesting_config_store.rs  step_backtesting_store.rs  step_realtime_config_store.rs  step_realtime_store.rs  tick_store.rs  working_level_store.rs
crates/strategies/tests/: test_in_memory_step_backtesting_store.rs  test_settings.rs
crates/strategy_optimizers/: Cargo.toml
crates/strategy_optimizers/src/: lib.rs  optimization.py  step_optimization.py
crates/strategy_runners/: Cargo.toml
crates/strategy_runners/src/: step.rs
crates/strategy_runners/src/step/: backtesting_runner.rs  stores.rs
crates/strategy_runners/src/step/stores/: base.rs
crates/trading_api/: Cargo.toml
crates/trading_api/src/: base_api.rs  helpers.rs  lib.rs  metaapi.rs
crates/trading_api/tests/: test_metaapi.rs
crates/trading_apis/: Cargo.toml
crates/trading_apis/src/: api.rs  helpers.rs  lib.rs  metaapi_market_data_api.rs
crates/trading_apis/tests/: test_metaapi.rs
crates/trading_bot/: Cargo.toml
crates/trading_bot/src/: main.rs
historical_data/step/GBPUSDm_1h_1m_2022-05-27_18-00_100800_(10_weeks)/: candles.csv  ticks.csv
historical_data/step/GBPUSDm_1h_1m_2022-05-27_18-00_110880_(11_weeks)/: candles.csv  ticks.csv
historical_data/step/GBPUSDm_1h_1m_2022-05-27_18-00_80640_(8_weeks)/: candles.csv  ticks.csv
scripts/: run-tests.bash
strategy_params/: step_params.csv
