[package]
name = "backtesting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = {path = "../base"}
trading_apis = { path = "../trading_apis" }
polars-lazy = "0.20.0"
simple-error = "0.2.3"
anyhow = "1.0.56"
chrono = "0.4.19"
csv = "1.1.6"
serde = {version = "1.0.137", features = ["derive"]}
log = "0.4.17"
rust_decimal = "1.25.0"
rust_decimal_macros = "1.25.0"

[dev-dependencies]
serde_json = "1.0.81"
tempfile = "3.3.0"
