[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
anyhow = "1.0.57"
ureq = {version = "2.4.0", features = ["json"]}
log = "0.4.17"
thiserror = "1.0.31"
serde = {version = "1.0.137", features = ["derive"]}
csv = "1.1.6"

[dev-dependencies]
serde_json = "1.0.81"
tempfile = "3.3.0"
