[package]
name = "strategies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = {path = "../base"}
backtesting = {path = "../backtesting"}
realtime = {path = "../realtime"}
chrono = "0.4.19"
xid = "1.0.0"
simple-error = "0.2.3"
