[package]
name = "strategy_optimizers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = {path = "../base"}
strategies = { path = "../strategies" }
strategy_runners = { path = "../strategy_runners" }
backtesting = { path = "../backtesting" }
trading_apis = { path = "../trading_apis" }
argmin = "0.7.0"
argmin-math = "0.2.1"
argmin_testfunctions = "0.1.1"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
anyhow = "1.0.58"
rust_decimal = "1.25.0"
rust_decimal_macros = "1.25.0"
chrono = "0.4.19"
dotenv = "0.15.0"
