[package]
name = "trading_apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = {path = "../base"}
serde = {version = "1.0.136", features = ["derive"]}
ureq = {version = "2.4.0", features = ["json"]}
chrono = "0.4.19"
anyhow = "1.0.56"
dotenv = "0.15.0"
log = "0.4.16"
testing_logger = "0.1.1"
polars = {version = "0.20.0", features = ["docs-selection"]}
