[package]
name = "trading_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.20.0", features = ["docs-selection"]}
strategy_runners = {path = "../strategy_runners"}
csv = "1.1.6"
serde = {version = "1.0.136", features = ["derive"]}
chrono = "0.4.19"
